--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Simple</title>
-    <script src="polyfill.js"></script>
+    <script src="datasets.js"></script>
   </head>
   <body style="margin: 0;">
     <script type="application/ld+json" src="simple.jsonld"></script>
